2001-12-13  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot-grub.pl.in (xst_boot_grub_replace_label): fix: wrong regexp.

	* util.pl.in (xst_item_is_in_list): style fix.

	* general.pl.in (xst_directive_run): bugfix: the min arg count
	was wrong.

	* boot-lilo.pl.in (xst_boot_lilo_verify_entrylabel): Verify
	an entry label's lilo.conf compliance. Uff: no docs on this in
	the man page.
	(xst_boot_lilo_verify): The lilo verification routine.

	* boot-grub.pl.in (xst_boot_grub_verify): No verification
	cases required for this to this moment. Just return success.

	* boot-conf.in (verify_print): print verification result.
	(verify): new verification directive. Other pertinent backends
	should implement this too.

2001-12-12  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_interface_replace_table): Don't replace
	in the network-script files.

	* boot.pl.in (xst_boot_conf_get): Oops: redhat 72 was behaving
	like 62 for testing.
	(xst_boot_entry_set): Use the copy for replacing. Was contaminating
	further iterations.
	(xst_boot_conf_set): rh 72 behaving like 62 for testing.

	* boot-grub.pl.in (xst_boot_grub_parse_other): Corrected this
	function: wrong semantics.
	(xst_boot_grub_replace_cmd_in_buff): beautify the output.
	(xst_boot_grub_replace_other): use the correct semantics.

2001-12-11  Arturo Espinosa Aldama  <arturo@ximian.com>

	* xml.pl.in (xst_xml_print_structure): minor naming change.

	* util.pl.in (xst_max): can't believe I needed this.

	* report.pl.in (xst_report_stderr): Helps to trap
	errors easily with the debugger.

	* network.pl.in (xst_network_interface_active): return
	undef instead of 0 if failed. This allows fallback.
	(xst_network_interfaces_get): Use parse_expand here too.
	(xst_network_get_interfaces_parse_table): In all distros,
	fallback to trivial 0 if interface_active fails. RedHat 7.2
	fallbacks trying with DEV then IFACE before using trivial 0.