@@ -46,7 +46,7 @@ BEGIN {
 
 $name = "internetsharing";
 $version = "___version___";
-@platforms = ("redhat-7.1", "redhat-7.0", "mandrake-7.2", "debian-2.2", "debian-woody");
+@platforms = ("redhat-7.1", "redhat-7.0", "redhat-7.2","mandrake-7.2", "debian-2.2", "debian-woody");
 
 $description =<<"end_of_description;";
        Sets up firewall rules for a basic internet sharing (masq)
